syntax = "proto3";

package apollo_practice;

service PostService {
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse) {};
}

message Post {
  int32 id = 1;
  string title = 2;
  string body = 3;
  int32 userId = 4;
}

message GetPostByIdRequest {
  int32 id = 1;
}

message GetPostByIdResponse {
  Post post = 1;
}
